Fixed bottom alignment of gh repo badges

--- a/doks-theme/_sass/components/_card.scss
+++ b/doks-theme/_sass/components/_card.scss
@@ -36,6 +36,7 @@
   width: 100%;
   height: 100%;
   min-height: 100%;
+  position: relative;
 }
 .card:hover {
   border: 1px solid $color-dark-blue;
@@ -75,6 +76,8 @@
 .card-footer {
   padding: 0.5rem 0.8rem;
   text-align: left;
+  position: absolute;
+  bottom: 0;
 }
 .card-container {
   display: none; /* Hidden by default */
